--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,8 @@
 <ul class="nav nav-list">
-    <li><a href="{{ site.baseurl }}/">Home</a></li>
+    <li><a href="{{ site.baseurl }}/">Главная</a></li>
+    <li class="divider"></li>
+    <li><a href="{{ site.baseurl }}/app-store-review-guidelines.html">App Store Review Guidelines</a></li>
+    <li class="divider"></li>
     {% for section in site.sections %}
         {% assign attr = section[0] %}
         {% assign label = section[1] %}
